fixed text overflow on tickets

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,5 +1,6 @@
 aside {
   background-color: var(--sidebar);
+  overflow: auto;
 }
 
 aside .logo {
